Fixed align in wrong place

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -9,7 +9,6 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 
 #container {
@@ -24,5 +23,6 @@ body {
     border-radius: 10px;
     border-width: 5px;
     border-style: solid;
+    width: 50%;
     height: 30%;
 }
